networking/kube-system-allow-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all
  namespace: kube-system
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - {}
  egress:
    - {}
